# fire_risk_classifier

./: .dockerignore  .gitignore  README.md  all.sh  benchmark.sh  benchmark_cnn.sh  benchmark_cnn2.sh  benchmark_densenet.sh  benchmark_densenet161.sh  benchmark_efficientnet_b5.sh  benchmark_resnet.sh  benchmark_resnet101.sh  benchmark_resnet50.sh  dockerfile  final_predictions2.csv  init.sh  labels.csv  main.py  new.sh  output.csv  pipeline.py  pyproject.toml  run.sh  run_complex.sh  run_ndvi.sh  test.sh  training_results.xlsx  training_results_freeze.xlsx  training_results_freeze_eb5.xlsx
classifier/: cnn.py
data/: Pontos.kmz  image_dataset.py
data/csvs/: test.csv  train.csv
dataclasses/: bounding_box.py  enums.py  house_point.py  params.py
fire_risk_classifier/: main.py  pipeline.py
fire_risk_classifier/classifier/: cnn.py
fire_risk_classifier/data/: image_dataset.py
fire_risk_classifier/data/csvs/: test.csv  test_2classes.csv  test_3classes.csv  train.csv  train_2classes.csv  train_3classes.csv
fire_risk_classifier/dataclasses/: bounding_box.py  enums.py  house_point.py  params.py
fire_risk_classifier/scripts/: compute_mean_std.py  create_images_to_balance.py  create_test_and_train_csv.py  decompress_images.py  freeze_benchmark.py  full_test_hydra.py  get_images.py  helper.py  merge_results.py  test.py  test_hydra.py  train_hydra.py  unfreeze_layers.py  write_results.py
fire_risk_classifier/utils/: arg_parser.py  extractor.py  helpers.py  image_getter.py  kml_reader.py  logger.py
models/densenet161/: densenet_body_2C_metrics.json
models/densenet169/: densenet169_body_2C_metrics.json
models/densenet201/: densenet201_body_2C_metrics.json
scripts/: create_test_and_train_csv.py  decompress_images.py  get_images.py  train_hydra.py
utils/: extractor.py  image_getter.py  kml_reader.py  logger.py
