[tool.poetry]
name = "fire-risk-classifier"
version = "0.1.0"
description = "A CNN for classifying house fire risks from images."
authors = ["Bruno <bme.silva@campus.fct.unl.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<2.0.0" 

# GPU-enabled PyTorch from the 'pytorch' source:
torch = { version = "2.0.1", source = "pytorch" }
torchvision = { version = "0.15.2", source = "pytorch" }
torchaudio = { version = "2.0.2", source = "pytorch" }

# Other packages from the default PyPI (no 'source' key needed)
requests = "^2.31.0"
aiohttp = "^3.9.5"
aiofiles = "^23.2.1"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Script definitions
[tool.poetry.scripts]
test = "fire_risk_classifier.scripts.test_hydra:main"
train = "fire_risk_classifier.scripts.train_hydra:main"
get_images = "fire_risk_classifier.scripts.get_images:main"
decompress_images = "fire_risk_classifier.scripts.decompress_images:main"
generate_dataset_csv = "fire_risk_classifier.scripts.create_test_and_train_csv:main"
create_images_to_balance = "fire_risk_classifier.scripts.create_images_to_balance:main"

full_test = "fire_risk_classifier.scripts.full_test_hydra:main"

# Only define the extra PyTorch wheel index:
[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

